Fixed word wrap in notifications and duplicate entries in zone dialog for smart-irrigation

--- a/project/frontend-services/apps/notification-management-frontend/src/app/remote-entry/notification-management-page/notification-management-page.component.scss
+++ b/project/frontend-services/apps/notification-management-frontend/src/app/remote-entry/notification-management-page/notification-management-page.component.scss
@@ -48,6 +48,10 @@ tr.element-row:not(.expanded-row):active {
   font-weight: 500;
 }
 
+.description-content {
+  white-space: pre-line;
+}
+
 .page {
   margin: 20px;
   position: relative;
